# dguscard

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
examples/: dispatch.rs
src/: accumulator.rs  builder.rs  command.rs  config.rs  crc.rs  device.rs  dispatch.rs  dispatcher.rs  error.rs  experimental.rs  instruction.rs  lib.rs  packet.rs  parser.rs  receiver.rs  rx.rs  ser.rs  tx.rs  widget.rs
src/de/: deserializer.rs  mod.rs  parser.rs
src/receiver/: receiver_state.rs
src/request/: mod.rs  serializer.rs  storage.rs
src/response/: accumulator.rs  deserializer.rs  mod.rs
src/rx/: accumulator.rs  deserializer.rs  mod.rs
src/ser/: mod.rs  output.rs  serializer.rs  storage.rs
src/tx/: mod.rs  serializer.rs
tests/: template.rs  tests.rs
